--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/filmie.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Movie Maze</title>
+    <title>Filmie</title>
   </head>
   <body>
     <div class="min-h-screen bg-black text-white" id="root"></div>
